# octv_gears_lgp

./: .gitignore  CMakeLists.txt  README.md  capture_sequence
descriptor/: lsusb_usb_descriptor
firmware/: qpaudfw.bin.hex  qpvidfwusb.bin.hex
src/: capture_sequence  launch-recording_utl005.c  lgp.c  test.c
